--- a/survey.html
+++ b/survey.html
@@ -26,12 +26,10 @@
     <h3><strong>About You</strong></h3>
     <h4>Name (Required)</h4>
     <input type="text" id="name" class="form-control" required="">
-
+<br>
     <h4>Link to Photo Image (Required)</h4>
     <input type="text" id="photo" class="form-control" required="">
-
-    <hr>
-
+<br>
     <h3><strong>Question 1</strong></h3>
     <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
     <select class="chosen-select" id="q1">
@@ -42,7 +40,7 @@
       <option value="4">4</option>
       <option value="5">5 (Strongly Agree)</option>
     </select>
-
+<br>
     <h3><strong>Question 2</strong></h3>
     <h4>Generally speaking, you rely more on your experience than your imagination.</h4>
     <select class="chosen-select" id="q2">
@@ -54,7 +52,7 @@
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
-
+    <br>
     <h3><strong>Question 3</strong></h3>
     <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
     <select class="chosen-select" id="q3" style=>
@@ -65,7 +63,7 @@
       <option value="4">4</option>
       <option value="5">5 (Strongly Agree)</option>
     </select>
-
+    <br>
     <h3><strong>Question 4</strong></h3>
     <h4>You rarely do something just out of sheer curiosity.</h4>
     <select class="chosen-select" id="q4">
@@ -76,7 +74,7 @@
       <option value="4">4</option>
       <option value="5">5 (Strongly Agree)</option>
     </select>
-
+    <br>
     <h3><strong>Question 5</strong></h3>
     <h4>People can rarely upset you.</h4>
     <select class="chosen-select" id="q5">
@@ -88,7 +86,7 @@
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
-
+    <br>
     <h3><strong>Question 6</strong></h3>
     <h4>It is often difficult for you to relate to other people’s feelings.</h4>
     <select class="chosen-select" id="q6">
@@ -99,7 +97,7 @@
       <option value="4">4</option>
       <option value="5">5 (Strongly Agree)</option>
     </select>
-
+    <br>
     <h3><strong>Question 7</strong></h3>
     <h4>In a discussion, truth should be more important than people’s sensitivities.</h4>
     <select class="chosen-select" id="q7">
@@ -111,7 +109,7 @@
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
-
+    <br>
     <h3><strong>Question 8</strong></h3>
     <h4>You rarely get carried away by fantasies and ideas.</h4>
     <select class="chosen-select" id="q8">
@@ -123,7 +121,7 @@
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
-
+    <br>
     <h3><strong>Question 9</strong></h3>
     <h4>You think that everyone’s views should be respected regardless of whether they are supported by facts or not.
     </h4>
@@ -136,7 +134,7 @@
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
-
+    <br>
     <h3><strong>Question 10</strong></h3>
     <h4>You feel more energetic after spending time with a group of people.</h4>
     <select class="chosen-select" id="q10">
@@ -164,12 +162,6 @@
             Repo</a></p>
       </div>
     </footer>
-
-<!-- Button trigger modal
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button> -->
-
 
     <!-- Modal -->
 <div class="modal fade" id="results-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -268,11 +260,11 @@
 
           console.log(data)
           // Grab the result from the AJAX post so that the best match's name and photo are displayed.
-          var p=$("<p>")
-            p.html(data.name)
+          var h1=$("<h1>")
+           h1.html("My name is:  "+data.name)
         var img=$("<img>")
         img.attr("src",data.photo)
-          $(".modal-body").append(p); 
+          $(".modal-body").append(h1); 
           $(".modal-body").append(img); 
           $('#results-modal').modal();
 
