--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <title>Tables Page</title>
 
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="../public/css/style.css">
+  <link rel="stylesheet" href="../Friend-Finder/public/css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -30,7 +30,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friend">API Friends List </a> | <a href="/api/GitHub Repo">GitHub Repo</a>
+        <p><a href="/api/friend">API Friends List </a> | <a href="https://github.com/idiatou69/Friend-Finder">GitHub Repo</a>
       </div>
     </footer>
 
