--- a/survey.html
+++ b/survey.html
@@ -9,7 +9,7 @@
 
   <link src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
   </link>
-
+<link rel="stylesheet" href="./public/css/style.css">
   <!-- Font Awesome Glyphicons -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -20,7 +20,9 @@
 
   <div class="container">
 
-    <h2>Survey Questions</h2>
+
+
+    <h2 class="survey">Survey Questions</h2>
     <hr>
 
     <h3><strong>About You</strong></h3>
@@ -158,7 +160,7 @@
     <hr>
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friend">API Friends List</a> | <a href="https://github.com/idiatou96/friendfinder">GitHub
+        <p><a href="/api/friend">API Friends List</a> | <a href="https://idiatou69.github.io/Friend-Finder/">GitHub
             Repo</a></p>
       </div>
     </footer>
