--- a/survey.html
+++ b/survey.html
@@ -160,8 +160,8 @@
     <hr>
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friend">API Friends List</a> | <a href="https://idiatou69.github.io/Friend-Finder/">GitHub
-            Repo</a></p>
+        <!-- <p><a href="/api/friend">API Friends List</a> | <a href="https://idiatou69.github.io/Friend-Finder/">GitHub
+            Repo</a></p> -->
       </div>
     </footer>
 
